--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Azure Functions sample for the Serverless framework",
   "scripts": {
     "test": "echo \"No tests yet...\"",
-    "start": "func host start"
+    "start": "sls offline"
   },
   "keywords": [
     "azure",
@@ -12,6 +12,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "serverless-azure-functions": "^2.0.0"
+    "serverless-azure-functions": "^2.0.0",
+    "serverless-offline": "^7.0.0"
   }
 }
