--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Azure Functions sample for the Serverless framework",
   "scripts": {
-    "test": "echo \"No tests yet...\"",
-    "start": "sls offline --noPrependStageInUrl"
+    "deploy": "sls deploy",
+    "dev": "sls offline --noPrependStageInUrl",
+    "test": "mocha __tests__/**.spec.js",
+    "test:coverage": "nyc --reporter=lcov --reporter=text npm run test",
+    "refresh": "rm -rf node_modules yarn.lock; npm install"
   },
   "keywords": [
     "azure",
@@ -14,7 +17,11 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.2",
+    "nyc": "^15.1.0",
     "serverless-azure-functions": "^2.0.0",
-    "serverless-offline": "^7.0.0"
+    "serverless-offline": "^7.0.0",
+    "sinon": "^11.1.1"
   }
 }
