--- a/.github/workflows/main_sls-wus2-dev-js-sls-azure-function.yml
+++ b/.github/workflows/main_sls-wus2-dev-js-sls-azure-function.yml
@@ -26,6 +26,7 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
 
     - name: 'Resolve Project Dependencies Using Npm'
+      uses: codecov/codecov-action@v1
       shell: pwsh
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
@@ -35,7 +36,6 @@ jobs:
         npm run test --if-present
         npm run test:coverage
         popd
-    - uses: codecov/codecov-action@v1
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1.3.1
