--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,3 +35,23 @@ jobs:
     - uses: codecov/codecov-action@v1
       with:
         directory: ./coverage/
+
+    - name: Login to Azure
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - run: |
+        az webapp list --query "[?state=='Running']"
+
+    - name: Deploy
+      run: npm run deploy
+    
+    - name: Azure CLI script
+    - uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.72
+        inlineScript: |
+          az logout
+          az cache purge
+          az account clear
