--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,7 +51,7 @@ jobs:
     - uses: azure/CLI@v1
       with:
         azcliversion: 2.0.72
-        inlineScript: |
+      run: |
           az logout
           az cache purge
           az account clear
