--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -48,10 +48,10 @@ jobs:
       run: npm run deploy
     
     - name: Azure CLI script
-    - uses: azure/CLI@v1
+      uses: azure/CLI@v1
       with:
         azcliversion: 2.0.72
-      run: |
+        inlineScript: |
           az logout
           az cache purge
           az account clear
