--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,12 +40,11 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-
     - run: |
         az webapp list --query "[?state=='Running']"
 
-    - name: Deploy
-      run: npm run deploy
+#     - name: Deploy
+#       run: npm run deploy
     
     - name: Azure CLI script
     - uses: azure/CLI@v1
