--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,14 +43,11 @@ jobs:
     - run: |
         az webapp list --query "[?state=='Running']"
 
-#     - name: Deploy
-#       run: npm run deploy
+    - name: Deploy
+      run: npm run deploy
     
-    - name: Azure CLI script
-    - uses: azure/CLI@v1
-      with:
-        azcliversion: 2.0.72
-        inlineScript: |
-          az logout
-          az cache purge
-          az account clear
+    - name: Azure Logout
+    - run: |
+        az logout
+        az cache purge
+        az account clear
