--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -36,8 +36,7 @@ jobs:
       with:
         directory: ./coverage/
 
-    - name: Login to Azure
-      uses: azure/login@v1
+    - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -45,7 +44,7 @@ jobs:
       run: npm run deploy
     
     - name: Azure Logout
-    - run: |
+      run: |
         az logout
         az cache purge
         az account clear
