--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,15 +28,20 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm install
+        npm audit fix
    
     - name: Run coverage
       run: npm run test:coverage
-    - uses: codecov/codecov-action@v1
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
       with:
         directory: ./coverage/
 
-    - uses: azure/login@v1
+    - name: Azure Login
+      uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
