--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.3.4",
     "mocha": "^9.0.2",
     "nyc": "^15.1.0",
+    "serverless": "^2.52.0",
     "serverless-azure-functions": "^2.0.0",
     "serverless-offline": "^7.0.0",
     "sinon": "^11.1.1"
