--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,9 +28,7 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: |
-        npm install
-        npm audit fix
+      run: npm install
    
     - name: Run coverage
       run: npm run test:coverage
