--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -45,6 +45,7 @@ jobs:
 
     - name: Deploy
       run: |
+        az login --service-principal -u ${{ secrets.AZURE_APP_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
         az account set -s ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         npm run deploy
     
